<package>
  <name>LMS1xx</name>
  <description brief="LMS1xx">

     Driver for SICK LMS1xx.

  </description>
  <author>Konrad Banachowicz</author>
  <license>GPL</license>

  <url>http://github.com/konradb3/RCPRG-ros-pkg/wiki/LMS1xx</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libLMS1xx</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>libLMS1xx</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>


