<package>
  <name>libLMS1xx</name>
  <description brief="libLMS1xx">

     Library for communicating with SICK LMS1xx.

  </description>
  <author>Konrad Banachowicz</author>
  <license>LGPL</license>
  <url>http://github.com/konradb3/RCPRG-ros-pkg/wiki/libLMS1xx</url>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>


